k8s/airsonic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: airsonic
  labels:
    app: airsonic
spec:
  selector:
    app: airsonic
  ports:
    - name: "webui"
      protocol: TCP
      targetPort: 4040
      port: 4040
