k8s/airsonic/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: airsonic
spec:
  rules:
  - host: airsonic.server.lemira
    http:
      paths:
      - path: /
        backend:
          serviceName: airsonic
          servicePort: 4040
